This is my solution to this task